# QA-Scripts

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: qa-ci.yml
apps/demo_api/: demo_api.py
apps/demo_web/: page_model.py
docs/: defect_lifecycle.md  recruiter_map.md  test_strategy.md  wave_two_test_strategy.md
reports/sample_outputs/: api-contract-summary.md  test-results.json
scripts/: _bootstrap.py
scripts/01_api_contract_tests/: README.md  test_api_contracts.py
scripts/02_postman_collection_runner/: README.md  collection.json  run_collection.py  test_collection_runner.py
scripts/03_selenium_pom_smoke/: README.md  test_login_pom.py
scripts/04_playwright_cross_browser_regression/: README.md  regression_matrix.py  test_real_playwright_smoke.py  test_regression_matrix.py
scripts/05_bdd_acceptance_tests/: README.md  login.feature  test_bdd_coverage.py
scripts/06_sql_data_validation/: README.md  sql_validation.py  test_sql_validation.py
scripts/07_ci_quality_gate/: README.md  quality_gate.py  test_quality_gate.py
scripts/08_defect_lifecycle_reporter/: README.md  defect_reporter.py
scripts/09_ai_assisted_test_case_generator/: README.md  generate_test_cases.py
scripts/10_mock_service_virtualization/: README.md  mock_payment_service.py  test_mock_payment_service.py
scripts/11_accessibility_audit/: README.md  audit_accessibility.py  test_accessibility_audit.py
scripts/12_visual_regression_snapshot/: README.md  compare_visual_snapshot.py  test_visual_regression.py
scripts/14_log_anomaly_scanner/: README.md  (+2 more)
(+40 files in other folders)
