[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-scripts"
version = "1.1.0"
description = "QA/SDET automation portfolio scripts"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = [".", "src"]
addopts = "-q"

[tool.ruff]
line-length = 120
src = ["src", "apps", "scripts"]
exclude = [".venv", "reports/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
